--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "config-global-vitest",
+  "name": "user_list-challenge",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,9 +11,12 @@
     "test": "vitest --ui"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.36.1",
+    "axios": "^1.5.1",
     "jsdom": "^22.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "styled-components": "^6.0.8",
     "vite-plugin-eslint": "^1.8.1",
     "vitest": "^0.33.0"
   },
@@ -32,6 +35,7 @@
     "eslint-plugin-react": "^7.33.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "msw": "^1.3.2",
     "prettier": "^3.0.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
